--- a/style.css
+++ b/style.css
@@ -16,8 +16,9 @@
 #navigate button {
 	border-top-left-radius: 6px;
 	border-top-right-radius: 6px;
+	border-bottom-left-radius: 6px;
+	border-bottom-right-radius: 6px;
 	box-shadow: 0 3px 3px rgba(0, 0, 0, 0.4), inset 0 1px 0 #FFF;
-  	text-shadow: 0 1px #FFF;
   	margin: 0 -5px;
   	padding: 0 20px;
 }
