--- a/rust.css
+++ b/rust.css
@@ -3,11 +3,11 @@ html {
 }
 
 body {
-    background-color: #DFD297;
+    background-color: #faf3dd;
 }
 
 #bigTitle span {
-    color: #DFD297;
+    color: #faf3dd;
     border-top-left-radius: 2px;
     border-top-right-radius: 2px;
     border-bottom-left-radius: 3px;
@@ -15,7 +15,7 @@ body {
     box-shadow: 0 2px 2px rgba(0, 0, 0, 0.4);
     margin: 0 -5px;
     padding: 0 20px;
-    background-color: #AC2832;
+    background-color: #c884a6;
     font-size: 200%;
 }
 
@@ -51,6 +51,15 @@ img {
   	margin: 0 -5px;
   	padding: 0 20px;
 	background-color: #FFFFFF;
+}
+
+#navigate button:hover {
+    color: #c884a6;
+    box-shadow: 0 3px 3px rgba(0, 0, 0, 0.4), inset 0 1px 0 #c884a6;
+}
+
+.info-block h3 {
+    color: #c884a6;
 }
 
 .code {
