--- a/rust.css
+++ b/rust.css
@@ -20,6 +20,10 @@ body {
     font-size: 200%;
 }
 
+#bigTitle a {
+    text-decoration: none
+}
+
 img {
     background-color: none;
 }
@@ -38,7 +42,7 @@ img {
 
 #header h2 {
     font-family: Perpetua,Baskerville,Big Caslon,Palatino Linotype,Palatino,URW Palladio L,Nimbus Roman No9 L,serif; 
-    font-size: 150%;
+    font-size: 170%;
     transition: all .5s ease-in-out;
 }
 
@@ -58,6 +62,7 @@ img {
 }
 
 #navigate button {
+    font-size: 130%;
     font-family: Perpetua,Baskerville,Big Caslon,Palatino Linotype,Palatino,URW Palladio L,Nimbus Roman No9 L,serif; 
 	border-top-left-radius: 6px;
 	border-top-right-radius: 6px;
