--- a/rust.css
+++ b/rust.css
@@ -16,7 +16,7 @@ body {
     box-shadow: 0 2px 2px rgba(0, 0, 0, 0.4);
     margin: 0 -5px;
     padding: 0 20px;
-    background-color: #c884a6;
+    background-color: #ac2832;
     font-size: 200%;
 }
 img {
@@ -76,19 +76,19 @@ img {
 
 #navigate button:hover {
     color: #c884a6;
-    box-shadow: 0 3px 3px rgba(0, 0, 0, 0.4), inset 0 1px 0 #c884a6;
+    box-shadow: 0 3px 3px rgba(0, 0, 0, 0.4), inset 0 1px 0 #ac2832;
 }
 
 .info-block h3 {
     font-family: Copperplate,Copperplate Gothic Light,fantasy;
-    color: #c884a6;
+    color: #ac2832;
     font-size: 200%;
     text-transform: uppercase;
 }
 
 .info-block button {
     background: #FFF;
-    color: #c884a6;
+    color: #ac2832;
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
     border-radius: 4px;
@@ -97,15 +97,18 @@ img {
     -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4), 0 1px 1px rgba(0, 0, 0, 0.2);
     -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4), 0 1px 1px rgba(0, 0, 0, 0.2);
     box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4), 0 1px 1px rgba(0, 0, 0, 0.2);
+  
 }
 
 .info-block {
-    font-family: Perpetua,Baskerville,Big Caslon,Palatino Linotype,Palatino,URW Palladio L,Nimbus Roman No9 L,serif; 
+    font-family: Perpetua,Baskerville,Big Caslon,Palatino Linotype,Palatino,URW Palladio L,Nimbus Roman No9 L,serif;
+    /*text-align: center;*/
+    font-size: 15px;
 }
 
 .test button {
     float: right;
-    background: #c884a6;
+    background: #;
     color: #FFF;
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
@@ -142,4 +145,9 @@ img {
     margin-right: 10%;
     box-shadow: 0 2px 2px rgba(0, 0, 0, 0.4);
     font-family: Consolas, Courier New, monospace;
+}
+
+h3 {
+    font-weight: bold;
+    /*text-align: center;*/
 }
