--- a/rust.css
+++ b/rust.css
@@ -74,9 +74,10 @@ img {
 	background-color: #FFFFFF;
 }
 
-#navigate button:hover {
-    color: #c884a6;
+#navigate button:hover, button:focus {
+    background: #F2EFE4;
     box-shadow: 0 3px 3px rgba(0, 0, 0, 0.4), inset 0 1px 0 #ac2832;
+    text-decoration: none;
 }
 
 .info-block h3 {
@@ -92,28 +93,30 @@ img {
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
     border-radius: 4px;
-    border: solid 1px #20538D;
+    border: solid 1px #e17f87;
     text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.4);
     -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4), 0 1px 1px rgba(0, 0, 0, 0.2);
     -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4), 0 1px 1px rgba(0, 0, 0, 0.2);
     box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4), 0 1px 1px rgba(0, 0, 0, 0.2);
+    align: center;
   
 }
 
 .info-block {
     font-family: Perpetua,Baskerville,Big Caslon,Palatino Linotype,Palatino,URW Palladio L,Nimbus Roman No9 L,serif;
     /*text-align: center;*/
-    font-size: 15px;
+    font-size: 20px;
 }
+
 
 .test button {
     float: right;
-    background: #;
+    background: #a06a84;
     color: #FFF;
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
     border-radius: 4px;
-    border: solid 1px #20538D;
+    border: solid 1px #bd98aa;
     text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.4);
     -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4), 0 1px 1px rgba(0, 0, 0, 0.2);
     -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4), 0 1px 1px rgba(0, 0, 0, 0.2);
@@ -124,8 +127,8 @@ img {
 }
 
 .test button:hover, button:focus {
-    background: #a06a84;
-    border: solid 1px #2A4E77;
+    background: #bd98aa;
+    border: solid 1px #bd98aa;
     text-decoration: none;
 }
 
@@ -133,9 +136,19 @@ img {
     -webkit-box-shadow: inset 0 1px 4px rgba(0, 0, 0, 0.6);
     -moz-box-shadow: inset 0 1px 4px rgba(0, 0, 0, 0.6);
     box-shadow: inset 0 1px 4px rgba(0, 0, 0, 0.6);
-    background: #785062;
-    border: solid 1px #203E5F;
+    background: #bd98aa;
+    border: solid 1px #bd98aa;
 }
+
+/*.info-block*/
+
+#info-button button:hover, button:focus {
+    background: #e17f87;
+    border: solid 1px #e17f87;
+    text-decoration: none;
+}
+
+
 
 .code {
     background-color: #FFFFFF;
@@ -151,3 +164,8 @@ h3 {
     font-weight: bold;
     /*text-align: center;*/
 }
+
+#info-text {
+    margin-left: 100px;
+}
+    
