--- a/rust.css
+++ b/rust.css
@@ -114,12 +114,12 @@ img {
 
 .test button {
     float: right;
-    background: #a06a84;
+    background: #ac2832;
     color: #FFF;
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
     border-radius: 4px;
-    border: solid 1px #bd98aa;
+    border: solid 1px #ac2832;
     text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.4);
     -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4), 0 1px 1px rgba(0, 0, 0, 0.2);
     -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4), 0 1px 1px rgba(0, 0, 0, 0.2);
@@ -130,8 +130,8 @@ img {
 }
 
 .test button:hover, button:focus {
-color: 
-    background: #faf3dd;
+    background: #FFF;
+    color: #ac2832;
     border: solid 1px #faf3dd;
     text-decoration: none;
 }
